# fairytale

./: .gitignore  README.md  build_manifest.py  fetch_companies.py  main.py  monte_carlo_theory.tex  pyproject.toml  retry_companies.py  visualize.py
examples/: buy_and_hold.py  momentum.py
fairytale/: AGENTS.md  __init__.py  _client.py  agent.py  as_of.py  backtest.py  broker.py  market.py  models.py  portfolio.py
output/: charts.html
scripts/: migrate_to_supabase.py
supabase/: schema.sql
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/assets/: page.tsx
web/src/app/(app)/assets/[symbol]/: page.tsx
web/src/app/(app)/compare/: page.tsx
web/src/app/(app)/correlations/: page.tsx
web/src/app/(app)/montecarlo/: page.tsx
web/src/app/(app)/sectors/: page.tsx
web/src/components/: AssetDashboard.tsx  AssetPicker.tsx  AssetsSidebar.tsx  ChartCard.tsx  CompareDashboard.tsx  CorrelationMatrix.tsx  DisclaimerFooter.tsx  MobileBlock.tsx  MonteCarloDashboard.tsx  MonteCarloTheory.tsx  PageHeader.tsx  Plot.tsx  SectorHeatmap.tsx  SidebarShell.tsx  StatCard.tsx  ViewsSidebar.tsx
web/src/components/charts/: CompareCharts.tsx  MonteCarloCharts.tsx  SingleCharts.tsx
web/src/lib/: correlation.ts  data.ts  montecarlo.ts  stats.ts  supabase.ts  theme.ts  types.ts
