[project]
name = "indian-market-analysis"
version = "0.1.0"
description = "Indian Market 10-Year Up/Down Analysis"
authors = [
    {name = "Aditya Patil"}
]
requires-python = "^3.11"
dependencies = [
    "yfinance (>=1.3.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "plotly (>=6.7.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
