[project]
name = "fairytale"
version = "0.1.0"
description = "fairytale: research SDK for Indian-market backtesting and AI trading agents, on top of Supabase."
authors = [
    {name = "Aditya Patil"}
]
requires-python = "^3.11"
dependencies = [
    "yfinance (>=1.3.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "supabase (>=2.9.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "fairytale" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
